--- a/polybar/config
+++ b/polybar/config
@@ -367,29 +367,32 @@ format-charging = <animation-charging><label-charging>
 
 format-discharging = <animation-discharging><label-discharging>
 
-format-full-prefix = ""
+format-full-prefix = ""
 format-full-prefix-foreground = ${tokyo.foreground-alt}
 format-full-prefix-background = ${tokyo.yellow}
 format-full-prefix-padding = 1
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
+label-full-background = ${tokyo.background-alt}
+label-full-foreground = ${tokyo.foreground-alt}
+label-full-padding = 1
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
 ramp-capacity-foreground = ${tokyo.foreground-alt}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
 animation-charging-padding = 1
-animation-charging-framerate = 750
+animation-charging-framerate = 600
 animation-charging-background = ${tokyo.yellow}
 animation-charging-foreground = ${tokyo.foreground-alt}
 
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
 animation-discharging-padding = 1
-animation-discharging-framerate = 750
+animation-discharging-framerate = 600
 animation-discharging-background = ${tokyo.yellow}
 animation-discharging-foreground = ${tokyo.foreground-alt}
 
