--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -110,7 +110,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: FuraCode Nerd Font Mono
+    family: FuraCode Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -133,7 +133,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    style: italic
+    style: Italic
 
   # Bold italic font face
   bold_italics:
