--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -110,7 +110,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: FuraCode Nerd Font
+    family: SauceCodePro Nerd Font Mono
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -120,6 +120,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
+    family: SauceCodePro Nerd Font Mono
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -133,7 +134,8 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    style: Italic
+    family: SauceCodePro Nerd Font Mono
+    # style: Italic
 
   # Bold italic font face
   bold_italics:
@@ -141,6 +143,8 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
+    #
+    family: SauceCodePro Nerd Font Mono
     style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
