--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -110,7 +110,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: SauceCodePro Nerd Font Mono
+    family: JetBrains Mono Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -120,7 +120,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: SauceCodePro Nerd Font Mono
+    family: JetBrains Mono Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -134,7 +134,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: SauceCodePro Nerd Font Mono
+    family: JetBrains Mono Nerd Font
     # style: Italic
 
   # Bold italic font face
@@ -144,7 +144,7 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: SauceCodePro Nerd Font Mono
+    family: JetBrains Mono Nerd Font
     style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
