--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -64,7 +64,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3
 modules-center = date
-modules-right = pulseaudio battery backlight-acpi memory cpu eth wlan temperature powermenu
+modules-right = pulseaudio battery backlight-acpi memory eth wlan powermenu
 
 tray-position = right
 tray-padding = 2
