--- a/alacritty/colors.yml
+++ b/alacritty/colors.yml
@@ -322,19 +322,6 @@ schemes:
     vi_mode_cursor:
       text:   CellBackground
       cursor: CellForeground
-    # search:
-    #   matches:
-    #     foreground: '#000000'
-    #     background: '#ffffff'
-    #   focused_match:
-    #    foreground: CellBackground
-    #    background: CellForeground
-    #   bar:
-    #     background: ''
-    #     foreground: ''
-    # line_indicator:
-    #   foreground: None
-    #   background: None
     selection:
       text:       CellBackground
       background: CellForeground
@@ -366,4 +353,32 @@ schemes:
       cyan:    '#427b58'
       white:   '#928374'
 
-colors: *tokyonight
+# Nord colorscheme
+nord: &nord
+   # Default colors
+   primary:
+     background: '#2E3440'
+     foreground: '#D8DEE9'
+
+   # Normal colors
+   normal:
+     black:   '#3B4252'
+     red:     '#BF616A'
+     green:   '#A3BE8C'
+     yellow:  '#EBCB8B'
+     blue:    '#81A1C1'
+     magenta: '#B48EAD'
+     cyan:    '#88C0D0'
+     white:   '#E5E9F0'
+
+   # Bright colors
+   bright:
+     black:   '#4C566A'
+     red:     '#BF616A'
+     green:   '#A3BE8C'
+     yellow:  '#EBCB8B'
+     blue:    '#81A1C1'
+     magenta: '#B48EAD'
+     cyan:    '#8FBCBB'
+     white:   '#ECEFF4'
+colors: *nord
