--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -1,3 +1,13 @@
 [[language]]
 name = "python"
 auto-format = true
+
+[[language]]
+name = "lua"
+scope = "source.lua"
+file-types = ["lua"]
+shebangs = ["lua"]
+roots = []
+comment-token = "--"
+language-server = {command = "/home/jp/.local/bin/lua-language-server/bin/lua-language-server"}
+indent = { tab-width = 2, unit = "  " }
