--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -110,7 +110,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: JetBrains Mono Nerd Font
+    family: Mononoki Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -120,7 +120,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: JetBrains Mono Nerd Font
+    family: Mononoki Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -134,8 +134,8 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: JetBrains Mono Nerd Font
-    # style: Italic
+    family: Mononoki Nerd Font
+    style: Italic
 
   # Bold italic font face
   bold_italics:
@@ -144,7 +144,7 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: JetBrains Mono Nerd Font
+    family: Mononoki Nerd Font
     style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
@@ -156,14 +156,14 @@ font:
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
   # spacing.
-  #offset:
-  #  x: 0
-  #  y: 0
+  # offset:
+  #   x: 0
+  #   y: 4
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the
   # right, increasing `y` moves the glyph upward.
-  #glyph_offset:
+  # glyph_offset:
   #  x: 0
   #  y: 0
 
