--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,7 +23,7 @@ bold_italic_font FuraCode Bold Italic Nerd Font Complete
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -180,11 +180,11 @@ cursor_shape block
 #: when reloading the config this will be changed only if the cursor
 #: shape has not been set by the program running in the terminal.
 
-cursor_beam_thickness 1.5
+# cursor_beam_thickness 1.5
 
 #: Defines the thickness of the beam cursor (in pts)
 
-cursor_underline_thickness 2.0
+# cursor_underline_thickness 2.0
 
 #: Defines the thickness of the underline cursor (in pts)
 
@@ -1508,6 +1508,5 @@ map kitty_mod+f6 debug_config
 #: }}}
 
 #: }}}
-
-# include dracula.conf
-include duskfox.conf
+#
+include onedark.conf
