--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -110,7 +110,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: UbuntuMono Nerd Font
+    family: SpaceMono Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Complete Mono
 
@@ -120,7 +120,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: UbuntuMono Nerd Font
+    family: SpaceMono Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -134,7 +134,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: UbuntuMono Nerd Font
+    family: SpaceMono Nerd Font
     style: Italic
 
   # Bold italic font face
@@ -144,21 +144,21 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: UbuntuMono Nerd Font
+    family: SpaceMono Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
     # style: Bold Italic
 
   # Point size
-  size: 13.0
+  size: 12.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
   # spacing.
-  offset:
+  # offset:
   #   x: 0
-    y: 2
+  #   y: 2
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the
