--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -110,9 +110,9 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: SpaceMono Nerd Font
+    family: Fantasque Sans Mono Nerd Font
     # The `style` can be specified to pick a specific face.
-    style: Complete Mono
+    style: Regular
 
   # Bold font face
   bold:
@@ -120,7 +120,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: SpaceMono Nerd Font
+    family: Fantasque Sans Mono Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -134,7 +134,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: SpaceMono Nerd Font
+    family: Fantasque Sans Mono Nerd Font
     style: Italic
 
   # Bold italic font face
@@ -144,8 +144,8 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: SpaceMono Nerd Font
-    style: Bold
+    family: Fantasque Sans Mono Nerd Font
+    style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
     # style: Bold Italic
@@ -156,9 +156,9 @@ font:
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
   # spacing.
-  # offset:
-  #   x: 0
-  #   y: 2
+  offset:
+    x: 0
+    y: 0
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the
