--- a/helix/config.toml
+++ b/helix/config.toml
@@ -1,4 +1,4 @@
-theme =  "nord"
+theme =  "onedark"
 
 [editor]
 idle-timeout = 0
@@ -14,8 +14,7 @@ insert = "bar"
 display-messages = true
 
 [keys.normal]
-"space" = { q = ":buffer-close" }
+"space" = { q = ":buffer-close", c = {a = "code_action"} }
 C-s = ":w" # Maps the Control-s to the typable command :w which is an alias for :write (save file)
 C-o = ":open ~/.config/helix/config.toml" # Maps the Control-o to opening of the helix config file
-g = { a = "code_action" } # Maps `ga` to show possible code actions
 G = "goto_file_end" # Maps `G` to goto end of file
