--- a/stylua.toml
+++ b/stylua.toml
@@ -1,3 +1,4 @@
 indent_type = "Tabs"
-indent_width = 4
-quote_style = "AutoPreferDouble"
+indent_width = 2
+quote_style = "AutoPreferSingle"
+column_width = 80
