--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Mononoki Regular Nerd Font Complete
-bold_font        Mononoki Bold Nerd Font Mono Complete
-italic_font      Mononoki Italic Nerd Font Complete
-bold_italic_font Mononoki Bold Italic Nerd Font Complete
+font_family				Iosevka Term Nerd Font Complete Mono
+bold_font					Iosevka Term Bold Nerd Font Complete Mono
+bold_italic_font	Iosevka Term Bold Oblique Nerd Font Complete Mono
+italic_font				Iosevka Term Oblique Nerd Font Complete Mono
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -23,7 +23,7 @@ bold_italic_font Mononoki Bold Italic Nerd Font Complete
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 16.0
 
 #: Font size (in pts)
 
@@ -188,7 +188,7 @@ cursor_shape block
 
 #: Defines the thickness of the underline cursor (in pts)
 
-cursor_blink_interval -1
+cursor_blink_interval 0
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
 #: to disable blinking. Negative values mean use system default. Note
