--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -110,7 +110,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: ShureTechMono Nerd Font
+    family: UbuntuMono Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -120,7 +120,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: ShureTechMono Nerd Font
+    family: UbuntuMono Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -134,7 +134,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: ShureTechMono Nerd Font
+    family: UbuntuMono Nerd Font
     # style: Italic
 
   # Bold italic font face
@@ -144,14 +144,14 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: ShureTechMono Nerd Font
+    family: UbuntuMono Nerd Font
     # style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
     # style: Bold Italic
 
   # Point size
-  size: 14.0
+  size: 16.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
