--- a/i3/config
+++ b/i3/config
@@ -21,6 +21,10 @@ font pango: UbuntuMono NF 10
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
 
+exec --no-startup-id nitrogen --restore
+
+exec_always picom -b -CGb
+
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
 
