--- a/i3/config
+++ b/i3/config
@@ -198,7 +198,7 @@ bindsym Mod4+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3status -c ~/.config/i3/i3status.conf
 }
 
 #######################################################################
@@ -217,3 +217,7 @@ exec i3-config-wizard
 # My custom bindings
 
 bindsym Mod4+e exec --no-startup-id "rofimoji -r 'Char' -f emojis nerd_font mathematical_operators greek_and_coptic -a clipboard"
+
+bindsym XF86MonBrightnessUp exec --no-startup-id "brightnessctl set 10%+"
+
+bindsym XF86MonBrightnessDown exec --no-startup-id "brightnessctl set 10%-"
